<resources>
    <string name="radio_name">ModuleRadio</string>
    <string name="radio_fm">FM</string>
    <string name="radio_am">AM</string>
    <string name="radio_mhz">MHz</string>
    <string name="radio_khz">KHz</string>
    <string name="radio_dab">DAB</string>
    <string name="radio_multi">DAB/FM</string>
    <string name="radio_collect">COLLECT</string>
    <string name="radio_station_name">Unknown Station</string>
    <string name="radio_fm_item_title">FM %.1f</string>
    <string name="radio_am_item_title">AM %1$d</string>
    <string name="radio_playlist_title">Station List (%1$d)</string>
    <string name="radio_rds_title">RDS Settings</string>
    <string name="radio_rds_total">RDS</string>
    <string name="radio_rds_rec">REC</string>
    <string name="radio_rds_af">AF</string>
    <string name="radio_rds_ta">TA</string>
    <string name="radio_loading">Loading…</string>
    <string name="radio_rds_tp">TP</string>
    <string name="radio_rds_st">ST</string>
    <string name="radio_rds_tf">AF</string>
    <string name="radio_rds_type_0">None</string>
    <string name="radio_rds_type_1">News</string>
    <string name="radio_rds_type_2">Affairs</string>
    <string name="radio_rds_type_3">Info</string>
    <string name="radio_rds_type_4">Sport</string>
    <string name="radio_rds_type_5">Educate</string>
    <string name="radio_rds_type_6">Drama</string>
    <string name="radio_rds_type_7">Culture</string>
    <string name="radio_rds_type_8">Science</string>
    <string name="radio_rds_type_9">Varied</string>
    <string name="radio_rds_type_10">Pop M</string>
    <string name="radio_rds_type_11">Rock M</string>
    <string name="radio_rds_type_12">Easy M</string>
    <string name="radio_rds_type_13">Light M</string>
    <string name="radio_rds_type_14">Classics</string>
    <string name="radio_rds_type_15">Other M</string>
    <string name="radio_rds_type_16">Weather</string>
    <string name="radio_rds_type_17">Finance</string>
    <string name="radio_rds_type_18">Children</string>
    <string name="radio_rds_type_19">Social</string>
    <string name="radio_rds_type_20">Religion</string>
    <string name="radio_rds_type_21">Phone In</string>
    <string name="radio_rds_type_22">Travel</string>
    <string name="radio_rds_type_23">Leisure</string>
    <string name="radio_rds_type_24">Jazz</string>
    <string name="radio_rds_type_25">Country</string>
    <string name="radio_rds_type_26">Nation M</string>
    <string name="radio_rds_type_27">Oldies</string>
    <string name="radio_rds_type_28">Folk M</string>
    <string name="radio_rds_type_29">Document</string>
    <string name="radio_rds_type_30">TEST</string>
    <string name="radio_rds_type_31">Alarm!</string>
    <string name="radio_playlist_no_list">Has no effect station</string>
    <string name="radio_ta_title">Traffic Announcement</string>
    <string name="radio_rds_info">RDS Info</string>
    <string name="radio_research">Scanning failed, please click retry</string>

    <string name="radio_no_collect">No Collect</string>
    <string name="radio_playlist_title2">Play List (%1$d)</string>
    <string name="radio_collect_list">Favorite List</string>
    <string name="radio_all_list">All List</string>
    <string name="radio_type_list">Station List</string>
    <string name="radio_ctg_list">Category List</string>
    <string name="radio_cancel_collected">Canceled collection</string>
    <string name="radio_search_no_list">No valid stations found yet</string>
    <string name="radio_no_content">No Content</string>
    <string name="radio_search_hint">Input radio station/channel</string>
    <string name="radio_search_text">Search</string>
    <string name="radio_search_history">Search history</string>
    <string name="radio_search_no_result">No Search results</string>
    <string name="radio_delete_tips">Confirm to clear history?</string>
    <string name="radio_delete_confirm">Confirm</string>
    <string name="radio_delete_cancel">Cancel</string>
    <string name="radio_fmsetup_text">FM SetUp</string>
</resources>
