<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="740dp"
    android:layout_height="500dp"
    android:layout_gravity="center"
    android:background="@drawable/ta_dialog_bg">

    <RelativeLayout
        android:layout_width="634dp"
        android:layout_height="300dp"
        android:layout_marginTop="70dp"
        android:layout_marginStart="53dp"
        android:layout_marginEnd="53dp"
        android:layout_marginBottom="130dp">
          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textSize="32sp"
              android:textColor="@color/radio_text_main_color"
              android:text="@string/radio_delete_tips"
              android:gravity="center"
              android:layout_centerInParent="true">

          </TextView>
    </RelativeLayout>

      <TextView
          android:id="@+id/tvDeleteConfirm"
          android:layout_width="wrap_content"
          android:minWidth="240dp"
          android:layout_height="70dp"
          android:layout_alignParentBottom="true"
          android:layout_marginStart="90dp"
          android:layout_marginBottom="36dp"
          android:textSize="30sp"
          android:gravity="center"
          android:text="@string/radio_delete_confirm"
          android:textColor="@color/radio_white1"
          android:background="@mipmap/epg_listen_bg">

      </TextView>


      <TextView
          android:id="@+id/tvDeleteCancel"
          android:layout_width="wrap_content"
          android:minWidth="240dp"
          android:layout_height="70dp"
          android:layout_alignParentBottom="true"
          android:layout_toEndOf="@id/tvDeleteConfirm"
          android:layout_marginStart="40dp"
          android:layout_marginBottom="36dp"
          android:textSize="30sp"
          android:gravity="center"
          android:text="@string/radio_delete_cancel"
          android:textColor="@color/radio_text_main_color"
          android:background="@mipmap/epg_cancel_bg">

      </TextView>


</RelativeLayout>