<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_dialog_full_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout
    android:id="@+id/rl_setting_bg"
    android:layout_width="722dp"
    android:layout_height="510dp"
    android:layout_centerInParent="true"
    android:layout_gravity="center"
    android:background="@drawable/ta_dialog_bg">


    <RelativeLayout
        android:id="@+id/rl_rds_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_rds_close"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_centerVertical="true"
            android:src="@mipmap/ta_dialog_close" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/radio_rds_title"
            android:textColor="@color/radio_text_main_color"
            android:textSize="34sp"
            android:layout_marginTop="40dp"/>

    </RelativeLayout>

    <!--RDS的设置开关-->

    <!--总开关-->
    <RelativeLayout
        android:id="@+id/rl_rds_total"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:layout_below="@id/rl_rds_top"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/radio_rds_total"
            android:textColor="@color/radio_text_main_color"
            android:textSize="34sp"
            android:layout_marginStart="93dp"/>

        <com.sy.swbt.SettingSwitchView
            android:id="@+id/sc_rds_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="93dp"/>
    </RelativeLayout>


    <!--REC开关-->
    <RelativeLayout
        android:id="@+id/rl_rds_rec"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:layout_below="@id/rl_rds_total">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/radio_rds_rec"
            android:textColor="@color/radio_text_main_color"
            android:textSize="34sp"
            android:layout_marginStart="93dp"/>

        <com.sy.swbt.SettingSwitchView
            android:id="@+id/sc_rds_rec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="93dp"/>

    </RelativeLayout>

    <!--AF开关-->
    <RelativeLayout
        android:id="@+id/rl_rds_af"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:layout_below="@id/rl_rds_rec">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/radio_rds_af"
            android:textColor="@color/radio_text_main_color"
            android:textSize="34sp"
            android:layout_marginStart="93dp" />

        <com.sy.swbt.SettingSwitchView
            android:id="@+id/sc_rds_af"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="93dp"/>

    </RelativeLayout>

    <!--TA开关-->
    <RelativeLayout
        android:id="@+id/rl_rds_ta"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:layout_below="@id/rl_rds_af">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/radio_rds_ta"
            android:textColor="@color/radio_text_main_color"
            android:textSize="34sp"
            android:layout_marginStart="93dp" />

        <com.sy.swbt.SettingSwitchView
            android:id="@+id/sc_rds_ta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="93dp"/>

    </RelativeLayout>


</RelativeLayout>
</RelativeLayout>